<resources>
    <string name="app_name" translatable="false">Farmer\'s Diary</string>
    <string name="serviceURL" translatable="false">http://farmersdiaryservice.cloudapp.net/FarmersDiaryService.svc/</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hintName">Name</string>
    <string name="hintPhone">Phone</string>
    <string name="title_activity_crops" translatable="false">Crops</string>
    <string name="title_activity_farmer_crops" translatable="false">farmerCrops</string>
    <string name="title_activity_add_crop" translatable="false">AddCrop</string>
    <string name="CropType">Type</string>
    <string name="EstimatesHeader">Estimates</string>
    <string name="YieldDate">Yield Date</string>
    <string name="Investment">Investment</string>
    <string name="Yield">Yield</string>
    <string name="AcresLable">Acres</string>
    <string name="SowingDate">Planted Date</string>
    <string-array name="units_array">
        <item>Kilo</item>
        <item>Quintal</item>
        <item>Tonne</item>
    </string-array>
    <string name="title_activity_crop_detail" translatable="false">CropDetail</string>
    <string name="title_activity_investments" translatable="false">Investments</string>
    <string name="title_activity_investmentlistitem" translatable="false">investmentlistitem</string>
    <string name="title_activity_add_edit_investment" translatable="false">AddEditInvestment</string>
    <string name="investment_type_label">Investment Type</string>
    <string-array name="investment_array">
        <item>Human Labor</item>
        <item>Pesticides</item>
        <item>Fertilizers</item>
        <item>Machines</item>
        <item>Other</item>
    </string-array>
    <string name="amount_label">Amount</string>
    <string name="title_activity_investment_detail" translatable="false">InvestmentDetail</string>
    <string name="price_label">Price</string>
    <string name="estimateInvestment">Estimate Investment</string>
    <string name="actualInvestment">Investment</string>
    <string name="estimateIncome">Estimate Income</string>
    <string name="ActualYield">Yield</string>
    <string name="actualPrice">Price</string>
    <string name="ActualIncome">Income</string>
    <string name="ActualLabel" >Actuals</string>
    <string name="YieldDoneSwitchLabel">Yield Details</string>
    <string name="ProfitText">Profit</string>
    <string name="LossText">Loss</string>
    <string name="IncomeText">Income</string>
    <string-array name="languages_array" translatable="false">
        <item id="@+id/action_english">English</item>
        <item id="@+id/action_telugu">తెలుగు</item>
        <item id="@+id/action_hindi">हिंदी</item>
    </string-array>
</resources>
