<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="vnr.farmersdiary.AddCrop"
    android:background="#fbfaff">



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/cropSpinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@id/cropSpinner">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AcresLable"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/acresEditText"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:id="@+id/sowDateLayout"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SowingDate"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/sowDate"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onSowDateClick"
            android:enabled="true"
            android:editable="false"
            android:background="#fffcbf"
            android:textAlignment="center"
            android:padding="2dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:rowCount="7"
        android:columnCount="3"
        android:layout_below="@+id/sowDateLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/estimatesLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/EstimatesHeader"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:background="@color/background_material_dark"
            android:textColor="@android:color/white" />


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/investment"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:text="0.00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Rs"
            android:id="@+id/textView6"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YieldDate"
            android:id="@+id/textView3"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Investment"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/yieldDate"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onYieldDateClick"
            android:enabled="true"
            android:editable="false"
            android:background="#fffcbf"
            android:textAlignment="center"
            android:padding="2dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yield"
            android:id="@+id/textView5"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <LinearLayout android:layout_column="1" android:layout_row="3"
            android:layout_width="fill_parent" android:layout_columnSpan="2">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/yieldEditText"
                android:layout_row="3"
                android:layout_column="1"
                android:text="0.00"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/unitsSpinner"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/convertionTextView"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label"
            android:id="@+id/estiatePriceTextView"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="10dp" />

        <LinearLayout android:layout_column="1" android:layout_row="5"
            android:layout_width="fill_parent" android:layout_columnSpan="2">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/estimatePriceEditText"
                android:text="0.00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/estimatePriceUnitsTextView"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="true"
                android:text="/unit"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>

        <TextView android:id="@+id/estimateIncomeLabel"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/IncomeText"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/estimateIncomeEditText"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:editable="false"
            android:text="0.00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Rs"
            android:id="@+id/textView7"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />

    </GridLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/estimatesLayout"
        android:text="done"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_done_round_background"
        android:src="@drawable/ic_check_black_24dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:onClick="onDoneClick" />

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/addCropProgres"
        android:layout_centerInParent="true" />

</RelativeLayout>
